# tap-salesforce

./: pyproject.toml  setup.py
tap_salesforce/: __init__.py  sync.py  tap.py
tap_salesforce/salesforce/: __init__.py  bulk.py  credentials.py  exceptions.py  rest.py
tap_salesforce/tests/: test_core.py
